linkboard ui bug fixed
layout bug fixed

--- a/seeseehome/static/css/link_board.css
+++ b/seeseehome/static/css/link_board.css
@@ -13,6 +13,7 @@
 }
 
 .linkboard-thumbnail-wrapper {
+	position: relative;
 	margin-bottom: 10px;
 }
 
@@ -20,4 +21,15 @@
 	-webkit-box-shadow: 0px 0px 13px 0px rgba(50, 50, 50, 0.75);
 	-moz-box-shadow:    0px 0px 13px 0px rgba(50, 50, 50, 0.75);
 	box-shadow:         0px 0px 13px 0px rgba(50, 50, 50, 0.75);
+}
+
+.post-command {
+	position: absolute;
+	display: none;
+	bottom: 10px;
+	right: 10px;
+}
+
+.linkboard-thumbnail-wrapper:hover .post-command {
+	display: block;
 }
